--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
     },
     "config": {
         "optimize-autoloader": true,
+        "openssl.cafile": null,
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
